Fix java packaging issues